font size fixes for various screen sizes

--- a/index.html
+++ b/index.html
@@ -135,23 +135,24 @@
 			    		<div class="row">
                         <div class="col-sm-12">
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
-                        <h3>
-                        <div><span class="biggerfont">
-                        I graduated with distiction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
-                        <br><br>
-                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery, and I have an upcoming authorship for my work in Forest Infrastructure with the World Resources Institute in Washington DC. 
-                        <br><br>
-                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, ModelBuilder, Mapbox.js, Leaflet.js, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
-                        <br><br>
-                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure,  environmental risk modeling.
-                        <br><br>  
-                        <div><span class="biggerfont">I am passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainability-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
-                        <br><br>
-                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven GIS analysis. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development, to final release for end-users. 
-                        <br><br>
-                        <!--<div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
-                        <br><br>-->                       
-                        </h3></div>
+	                        <h3>
+	                        <span class="biggerfont">
+	                        I graduated with distiction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
+	                        <br><br>
+	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery, and I have an upcoming authorship for my work in Forest Infrastructure with the World Resources Institute in Washington DC. 
+	                        <br><br>
+	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, ModelBuilder, Mapbox.js, Leaflet.js, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
+	                        <br><br>
+	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure,  environmental risk modeling.
+	                        <br><br>  
+	                        <div><span class="biggerfont">I am passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainability-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
+	                        <br><br>
+	                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven GIS analysis. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development, to final release for end-users. 
+	                        <br><br>
+	                        <!--<div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
+	                        <br><br>-->                       
+	                        </h3>
+                        </div>
 					
 			    			<!--<div class="aboutmefooter col-xs-10 col-sm-offset-1"><i>More than halfway through my degree program in Physics, I realized I was happier learning about the natural environment around me. I switched my major to Applied Mathematics & Environmental Hydrology and never looked back. I've had the great opportunity to work for both large environmental research institutions, along with small community-based environmental organizations. This diversity have given me a unique prespective on environmental sustainability and new urbanism. I've simultaniously created a strong foundation of skills in critical thinking, data visualization, and geospatial analysis. 
 							<br><br>
