--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<!--Worksample Section-->
 		        <div role="tabpanel" class="tab-pane fade" id="worksamples">
 		            <div class="col-lg-4 col-xs-6">
-		                    <a href="dylansc22.github.io/worksample/" class="portfolio-box">
+		                    <a href="http://dylansc22.github.io/worksample/" class="portfolio-box">
 		                        <img src="img/ffw2.png" class="img-responsive" alt="">
 		                        <div class="portfolio-box-caption">
 		                            <div class="portfolio-box-caption-content">
