--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 	                        <span class="biggerfont">
 	                        I graduated with distiction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery, and I have an upcoming authorship for my work in Forest Infrastructure with the World Resources Institute in Washington DC. 
+	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery for my work in agricultural water use estimation practices; and at the World Resouces Institute for my work in forest infrastructure influence on water management. 
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, ModelBuilder, Mapbox.js, Leaflet.js, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
+	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, SQL, ModelBuilder, Mapbox.js, Leaflet.js, Aerial Drone Mapping, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
 	                        <br><br>
-	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure,  environmental risk modeling.
+	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure,  environmental risk modeling, and energy/tech stock investing.
 	                        <br><br>  
 	                        <div><span class="biggerfont">I am passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainability-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
 	                        <br><br>
-	                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven GIS analysis. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development, to final release for end-users. 
+	                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughoutd evelopment stages, to final presentation of results. 
 	                        <br><br>
 	                        <!--<div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
 	                        <br><br>-->                       
@@ -258,7 +258,7 @@
 		                	<div class="text-vertical-center"> 
 
 
-						        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="80%" height="700"></iframe>
+						        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8ckx5VzMtbmJJYzA/preview" width="80%" height="700"></iframe>
 						     	<div>
 						        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
 						        <a type="button" href="pdf/Resume.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
@@ -286,7 +286,7 @@
 	        <a type="button" href="pdf/Resume.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
 	      </div>
 	      <div class="modal-body">
-	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="100%" height="800"></iframe>
+	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8ckx5VzMtbmJJYzA/preview" width="100%" height="800"></iframe>
 	      </div>
 	    </div>
 	    </div>
