minor improvements to About Me section

--- a/index.html
+++ b/index.html
@@ -139,17 +139,17 @@
 	                        <span class="biggerfont">
 	                        I graduated with distiction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery for my work in agricultural water use estimation practices; and at the World Resouces Institute for my work in forest infrastructure influence on water management. 
+	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery for my work in improving methods of estimating agricultural water use. I have been formally acknowledged in a recent publication by the World Resources Insitute for my GIS contributions to the Global Forest Watch & Natural Infrastructure Programs. 
 	                        <br><br>
 	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, SQL, ModelBuilder, Mapbox.js, Leaflet.js, Aerial Drone Mapping, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
 	                        <br><br>
-	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure,  environmental risk modeling, and energy/tech stock investing.
+	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, urban planning, industrial composting, transit infrastructure,  environmental risk modeling, and stock market trading in the energy/tech sector.
 	                        <br><br>  
-	                        <div><span class="biggerfont">I am passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainability-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
+	                        <div><span class="biggerfont">I am fascinated by </span>stability theory and how to relates to urban design & planning. How parameters make for socioeconomic & environmentally stable societies? Smart-city design and sustainability-built infrastructure, water security, urban center thrive and it's citizens prosper. 
 	                        <br><br>
-	                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughoutd evelopment stages, to final presentation of results. 
+	                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development stages, to final presentation of results. 
 	                        <br><br>
-	                        <!--<div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
+	                        <!--<div><span class="biggerfont">For the past year </span>I have paid off more than $20,000 in student loans working as a warehouse laborer, bartender, and stock-market daytrader (in the tech/energy sector). The majority of my free time was spent teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
 	                        <br><br>-->                       
 	                        </h3>
                         </div>
