fixed spelling errors and a broken link in worksample section

--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
 	                        <h3>
 	                        <span class="biggerfont">
-	                        I graduated with distiction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
+	                        I graduated with distinction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery for my work in improving methods of estimating agricultural water use. I have been formally acknowledged in a recent publication by the World Resources Insitute for my GIS contributions to the Global Forest Watch & Natural Infrastructure Programs. 
+	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survey for my work in improving methods of estimating agricultural water use. I have been formally acknowledged in a recent publication by the World Resources Institute  for my GIS contributions to the Global Forest Watch & Natural Infrastructure Programs. 
 	                        <br><br>
 	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, SQL, ModelBuilder, Mapbox.js, Leaflet.js, Aerial Drone Mapping, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
 	                        <br><br>
 	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, urban planning, industrial composting, transit infrastructure,  environmental risk modeling, and stock market trading in the energy/tech sector.
 	                        <br><br>  
-	                        <div><span class="biggerfont">I am fascinated by </span>stability theory and how to relates to urban design & planning. How parameters make for socioeconomic & environmentally stable societies? Smart-city design and sustainability-built infrastructure, water security, urban center thrive and it's citizens prosper. 
-	                        <br><br>
+	                        <!--<div><span class="biggerfont"> My current research focuses on </span> better understanding 'the city as an organism.' Cities scale themselves with time, human capital, and economic growth. What parameters govern this growth? What systematic relationships govern all city growth as universalities? The better we understand these questions, the better we can create places for citizens to thrive. 
+	                        <br><br>-->
 	                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development stages, to final presentation of results. 
 	                        <br><br>
 	                        <!--<div><span class="biggerfont">For the past year </span>I have paid off more than $20,000 in student loans working as a warehouse laborer, bartender, and stock-market daytrader (in the tech/energy sector). The majority of my free time was spent teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
@@ -304,7 +304,7 @@
 	        <a type="button" href="pdf/SeniorCapstonePoster.pdf" class="btn btn-primary" download="SeniorCapstone_DylanCobean.pdf">Download</a>
 	      </div>
 	      <div class="modal-body">
-	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8SFpDb09DYUpGWFU/preview" width="100%" height="550"></iframe>
+	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8a2hWdk1MMVB2cnc/preview" width="100%" height="550"></iframe>
 	      </div>
 	    </div>
 	    </div>
