--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
 		                	<div class="text-vertical-center"> 
 
 
-						        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8SFpDb09DYUpGWFU/preview" width="80%" height="700"></iframe>
+						        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8Mnc2UVZFckhCSFU/preview" width="80%" height="700"></iframe>
 						     	<div>
 						        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
-						        <a type="button" href="pdf/Resume.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
+						        <a type="button" href="pdf/Resume - Dylan Cobean - 2 pages.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
 						      </div>
 						      </div>
 						    </div>
@@ -283,10 +283,10 @@
 	      <div class="modal-header">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 	        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
-	        <a type="button" href="pdf/Resume.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
+	        <a type="button" href="pdf/Resume - Dylan Cobean - 2 pages.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
 	      </div>
 	      <div class="modal-body">
-	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8SFpDb09DYUpGWFU/preview" width="100%" height="800"></iframe>
+	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8Mnc2UVZFckhCSFU/preview" width="100%" height="800"></iframe>
 	      </div>
 	    </div>
 	    </div>
