--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 	                        <br><br>
 	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survey for my work in improving methods of estimating agricultural water use. I have been formally acknowledged in a recent publication by the World Resources Institute  for my GIS contributions to the Global Forest Watch & Natural Infrastructure Programs. 
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, SQL, ModelBuilder, Mapbox.js, Leaflet.js, Aerial Drone Mapping, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
+	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, SQL, ModelBuilder, Mapbox GL, Leaflet, Aerial Drone Mapping, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
 	                        <br><br>
-	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, urban planning, industrial composting, transit infrastructure,  environmental risk modeling, and stock market trading in the energy/tech sector.
+	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on urban infrastructure, water-use, composting, transit infrastructure, statistics, and bicycle tech.
 	                        <br><br>  
 	                        <!--<div><span class="biggerfont"> My current research focuses on </span> better understanding 'the city as an organism.' Cities scale themselves with time, human capital, and economic growth. What parameters govern this growth? What systematic relationships govern all city growth as universalities? The better we understand these questions, the better we can create places for citizens to thrive. 
 	                        <br><br>-->
