--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		                </a>
 		            </div>
 		            <div class="col-lg-4 col-xs-6">
-		                <a href="#" class="portfolio-box">
+		                <a href="https://dylansc22.github.io/tnr" class="portfolio-box">
 		                    <img src="img/Tucson3.png" class="img-responsive" alt="">
 		                    <div class="portfolio-box-caption">
 		                        <div class="portfolio-box-caption-content">
@@ -205,7 +205,7 @@
 		                                GIS ANALYSIS<br><br>
 		                            </div>
 		                            <div class="project-name">
-		                                Evaluation of Tucson's Public Transit vs Bicycle Infrastructure<br><br>(Personal Project) 
+		                                Finding Tucson's Safest Bicycle Roads for 'Critical Mass' Group-Rides<br><br>(Personal Project) 
 		                            </div>
 		                        </div>
 		                    </div>
