[MINOR] - commented off resume section to make the website more 'consultanty', and less 'gimme a job plz'... Did some other minor CSS stuff

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 		</div>
 	</div><!--end container-->
 
+	<div id="newcontainer">
     <!--<div id='mapidheader'>-->
         <div class="container-fluid">
             <div class="row-fluid">
@@ -115,7 +116,7 @@
                       <ul class="nav nav-tabs nav-justified nowrap" role="tablist">
                         <li class="active" role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
                         <li role="presentation"><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h1>WORK SAMPLES</h1></a></li>
-                        <li role="presentation"><a href="#resumesection" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>RESUME</h1></a></li>
+                        <!--<li role="presentation"><a href="#resumesection" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>RESUME</h1></a></li>-->
                         <!--<li role="presentation"><a href="#currentprojects" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>CURRENT PROJECTS</h1></a></li>-->
                         <!--<li role="presentation"><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>-->
                       </ul>
@@ -275,7 +276,6 @@
     		</div>
 		</div>
 	</div><!--End Container-fluid-->
-
 
 
 	<!-- Resume Modal -->
