[MINOR] - tweaks to css, looks good!

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             <div class="row-fluid">
                 <div id="navigationtabs" class="col-xs-12">
                     <!-- Nav tabs -->
-                      <ul class="nav nav-tabs nav-justified nowrap" role="tablist">
-                        <li class="active" role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
-                        <li role="presentation"><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h1>WORK SAMPLES</h1></a></li>
+                      <ul class="nav nav-tabs" role="tablist">
+                        <li class="active col-xs-6 align-center" role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
+                        <li class="col-xs-6" role="presentation"><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h1>WORK SAMPLES</h1></a></li>
                         <!--<li role="presentation"><a href="#resumesection" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>RESUME</h1></a></li>-->
                         <!--<li role="presentation"><a href="#currentprojects" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>CURRENT PROJECTS</h1></a></li>-->
                         <!--<li role="presentation"><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>-->
