[MINOR] - Fixed typo

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
 	                        <h3>
 	                        <span class="biggerfont">
-	                        I'm a Bartender and Warehouse Laboror, </span> self taught in a wide variety of software suites and coding languages.  I'm passionate about using GIS softwares for Urban Analysis to improving city design. 
+	                        I'm a Bartender and Warehouse Laborer, </span> self taught in a wide variety of software suites and coding languages.  I'm passionate about using GIS softwares for Urban Analysis to improving city design. 
 	                        <br><br>
 	                        <span class="biggerfont">
 	                        I graduated with distinction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
