[MINOR] - Added Founder of TucsonPathways, and removed What I Can Provide Your Team. Making the porfolio less about job hunting

--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
 	                        <h3>
 	                        <span class="biggerfont">
-	                        I'm a Bartender and Warehouse Laborer, </span> self taught in a wide variety of software suites and coding languages.  I'm passionate about using GIS softwares for Urban Analysis to improving city design. 
+	                        I am a bartender, bike mechanic, & warehouse laborer, </span> self taught in a wide variety of software suites and coding languages.  I'm passionate about using GIS softwares for Urban Analysis to improving city design. 
+	                        <br><br>
+	                        <span class="biggerfont">
+	                        I am the founder of TucsonPathways.org</span> - a data-driven bicycle advocacy organization, focused on finding safer, quieter, more enjoyable bicycle commutes; utilizing an online web-map of residential roads interconnected through HAWK crosswalks. 
 	                        <br><br>
 	                        <span class="biggerfont">
 	                        I graduated with distinction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
@@ -151,8 +154,8 @@
 	                        <br><br>  
 	                        <!--<div><span class="biggerfont"> My current research focuses on </span> better understanding 'the city as an organism.' Cities scale themselves with time, human capital, and economic growth. What parameters govern this growth? What systematic relationships govern all city growth as universalities? The better we understand these questions, the better we can create places for citizens to thrive. 
 	                        <br><br>-->
-	                        <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development stages, to final presentation of results. 
-	                        <br><br>
+	                        <!--<div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development stages, to final presentation of results. 
+	                        <br><br>-->
 	                        <!--<div><span class="biggerfont">For the past year </span>I have paid off more than $20,000 in student loans working as a warehouse laborer, bartender, and stock-market daytrader (in the tech/energy sector). The majority of my free time was spent teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
 	                        <br><br>-->                       
 	                        </h3>
