+ | SML | Tweaks/AboutMe | Tweaked the wording of About Me Section. Removed some of the bartender, warehouse worker stuff =(

--- a/index.html
+++ b/index.html
@@ -137,21 +137,26 @@
                         <div class="col-sm-12">
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
 	                        <h3>
-	                        <span class="biggerfont">
-	                        I am a bartender, bike mechanic, & warehouse laborer, </span> self taught in a wide variety of software suites and coding languages.  I'm passionate about using GIS softwares for Urban Analysis to improving city design. 
+	                       	<span class="biggerfont">
+	                        I am self-taught GIS developer</span> What does that even mean? Idk... I think I basically I use knowledge of GIS and web-design, to analyze and visualize data in cool ways. Those visuals become narratives, and those narratives (hopefully) impact change. That's kind of what I'm going for.
 	                        <br><br>
 	                        <span class="biggerfont">
-	                        I am the founder of TucsonPathways.org</span> - a data-driven bicycle advocacy organization, focused on finding safer, quieter, more enjoyable bicycle commutes; utilizing an online web-map of residential roads interconnected through HAWK crosswalks. 
+	                        I am the founder of TucsonPathways.org</span> - a data-driven bicycle advocacy organization, focused on intelligent-routing for safer, quieter, more enjoyable bicycle commutes.   
 	                        <br><br>
 	                        <span class="biggerfont">
-	                        I graduated with distinction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
+	                        I graduated with distinction</span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survey for my work in improving methods of estimating agricultural water use. I have been formally acknowledged in a recent publication by the World Resources Institute  for my GIS contributions to the Global Forest Watch & Natural Infrastructure Programs. 
+	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survey for my work in using GIS methods to improve estimates of agricultural water-use. I have been formally acknowledged in a publication by the World Resources Institute for my GIS contributions to the Forest Conservation Natural Infrastructure Program.
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, SQL, ModelBuilder, Mapbox GL API, Leaflet, Aerial Drone Mapping, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
+	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, QGIS, Spatial Analysis Toolsets, OpenStreetMaps, iD, JOSM, HTML5, CSS, Javascript, jQuery, git, SQL, Python, Mapbox-GL, Leaflet, Aerial Drone Mapping, Routing Engine Software, City Engine, Database Management BMPs, Microsoft Office Suite, along with several others supplementary programs.
 	                        <br><br>
-	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on urban planning, bicycle infrastructure, agricutlural water-use, web design, composting, UX and UI design, statistics, and bicycle tech.
-	                        <br><br>  
+	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
+	                        <br><br>
+	                        <!--<div><span class="biggerfont">Questions I like to ask </span>include 'how can we better understand why cities grow? How does access to park-space correlate with human health? feurban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
+	                        <br><br>-->
+
+	                        <!--	                        <span class="biggerfont">I have worked </span>as a bike mechanic, GIS analyst, warehouse laborer, technical writer, bartender, farm-laborer, freelance-cartographer, and hydrological technician. 
+	                       	<br><br>-->
 	                        <!--<div><span class="biggerfont"> My current research focuses on </span> better understanding 'the city as an organism.' Cities scale themselves with time, human capital, and economic growth. What parameters govern this growth? What systematic relationships govern all city growth as universalities? The better we understand these questions, the better we can create places for citizens to thrive. 
 	                        <br><br>-->
 	                        <!--<div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development stages, to final presentation of results. 
